[package]
name = "chipvm"
version = "0.1.0"
authors = ["mdgaziur <mdgaziurrahmannoor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
sdl2 = { version = "0.30", features = ["gfx"], default-features = false }